--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,10 @@ where = src
 [options.package_data]
 * = py.typed
 
+vdoc =
+    docs/**
+    webapp/**
+
 [options.extras_require]
 dev =
     %(tox)s
