--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,6 +38,7 @@ jobs:
       with:
         name: coverage-${{ matrix.python-version }}
         path: reports/.coverage.*test
+        include-hidden-files: true
 
   coverage:
     runs-on: ubuntu-latest
@@ -48,21 +49,27 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Download all coverage artifacts
+        uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+          path: reports
+
       - uses: actions/setup-python@v5
         with:
           python-version: 3.11
-
-      - name: Download all coverage artifacts
-        uses: actions/download-artifact@v4
-
-      - name: Copy coverage reports to reports folder
-        run: mkdir reports && find . -type f -path "./coverage-3.*/*" -exec cp {} reports/ \;
 
       - name: Install tox
         run: python -m pip install --upgrade pip tox
 
       - name: Combine coverage results
         run: tox run -e combine-test-reports
+
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-coverage-report
+          path: reports/coverage.xml
 
   lint:
     runs-on: ubuntu-latest
