--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -71,7 +71,7 @@ jobs:
           name: code-coverage-report
           path: reports/coverage.xml
 
-  lint:
+  lint-python:
     runs-on: ubuntu-latest
 
     steps:
@@ -88,3 +88,20 @@ jobs:
 
     - name: Run static checks
       run: tox -e lint
+
+  lint-ts:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+
+    - name: Install Dependencies
+      run: npm ci
+
+    - name: Lint UI
+      run: npm run lint
