feat: Add basic CLI using `typer`

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,10 @@ vdoc =
     docs/**
     webapp/**
 
+[options.entry_points]
+console_scripts =
+    vdoc=vdoc.cli.main:app
+
 [options.extras_require]
 dev =
     %(tox)s
