--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ dev =
 lint =
     %(lint-template)s
     # Add your linting dependencies below this line
+    httpx
 
 test =
     %(test-template)s
