ci: Add tox env for building the web UI and add dependencies to build

--- a/tox.ini
+++ b/tox.ini
@@ -85,8 +85,19 @@ commands =
 [testenv:build]
 description = Build the package.
 extras = build
+depends =
+    build-ui
+    docs
+
 commands =
     # Clean up build directories
     python -c 'from shutil import rmtree; rmtree("build", True); rmtree("dist", True)'
     # Build the package
     python -m build .
+
+[testenv:build-ui]
+description = Build the web UI.
+allowlist_externals =
+    npm
+commands =
+    npm run build
