--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
     - main
+    tags:
+      - '*'
 
 jobs:
   test:
@@ -105,3 +107,37 @@ jobs:
 
     - name: Lint UI
       run: npm run lint
+
+  build:
+    runs-on: ubuntu-latest
+    needs:
+      - test
+      - lint-python
+      - lint-ts
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+
+    - uses: actions/setup-python@v5
+      with:
+        python-version: 3.13
+
+    - name: Install npm dependencies
+      run: npm ci
+
+    - name: Install tox
+      run: python -m pip install --upgrade tox==4.23.2 tox-uv~=1.16.0
+
+    - name: Build docs
+      run: tox run -e docs
+
+    - name: Build UI
+      run: npm run build
+
+    - name: Build python app
+      run: tox run -e build
