--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "3.4.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vite-plugin-compression2": "^1.3.3"
   }
 }
