--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,7 @@ test =
     # Dependencies that are imported in one of your files
     # must also be added to the linting dependencies.
     httpx
+    sphinx
 
 doc =
     %(doc-template)s
