fix(tests): Wait for docs server to come online

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,9 @@ lint =
     %(lint-template)s
     # Add your linting dependencies below this line
     httpx
+    tenacity
+    requests
+    types-requests
 
 test =
     %(test-template)s
@@ -60,6 +63,8 @@ test =
     # must also be added to the linting dependencies.
     httpx
     sphinx
+    tenacity
+    requests
 
 doc =
     %(doc-template)s
