--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,138 +6,29 @@ on:
     - main
   push:
     branches:
-    - main
+    - "main"
     tags:
       - '*'
 
 jobs:
-  test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        python-version: ["3.11", "3.12", "3.13"]
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install tox
-      run: python -m pip install --upgrade pip tox==4.23.2 tox-uv~=1.16.0 tox-gh-actions~=3.0
-
-    - name: Run tests
-      run: tox
-
-    - name: Upload coverage artifact
-      if: matrix.os == 'ubuntu-latest'
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-${{ matrix.python-version }}
-        path: reports/.coverage.*test
-        include-hidden-files: true
-
-  coverage:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    needs: test
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Download all coverage artifacts
-        uses: actions/download-artifact@v4
-        with:
-          merge-multiple: true
-          path: reports
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.11
-
-      - name: Install tox
-        run: python -m pip install --upgrade pip tox
-
-      - name: Combine coverage results
-        run: tox run -e combine-test-reports
-
-      - name: Archive code coverage results
-        uses: actions/upload-artifact@v4
-        with:
-          name: code-coverage-report
-          path: reports/coverage.xml
-
-  lint-python:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-
-    - name: Install tox
-      run: python -m pip install --upgrade tox==4.23.2 tox-uv~=1.16.0
-
-    - name: Run static checks
-      run: tox -e lint
-
-  lint-ts:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-
-    - name: Install Dependencies
-      run: npm ci
-
-    - name: Lint UI
-      run: npm run lint
-
+  tests-and-coverage:
+    uses: ./.github/workflows/tests_and_coverage.yml
+  linting:
+    uses: ./.github/workflows/linting.yml
   build:
+    uses: ./.github/workflows/build.yml
+  publish:
     runs-on: ubuntu-latest
+    if: startsWith(github.event.ref, 'refs/tags/')
     needs:
-      - test
-      - lint-python
-      - lint-ts
+      - tests-and-coverage
+      - linting
+      - build
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
 
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
+      - name: Publish project
+        run: |
+          echo "Publishing project..."
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: 3.13
-
-    - name: Install npm dependencies
-      run: npm ci
-
-    - name: Install tox
-      run: python -m pip install --upgrade tox==4.23.2 tox-uv~=1.16.0
-
-    - name: Build docs
-      run: tox run -e docs
-
-    - name: Build UI
-      run: npm run build
-
-    - name: Build python app
-      run: tox run -e build
