--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,5 @@ jobs:
     - name: Upload python artifacts
       uses: actions/upload-artifact@v4
       with:
+        name: dist
         path: dist/*
