--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,8 +1,9 @@
 name: CI pipeline
 
 permissions:
-  contents: read
+  contents: write
   id-token: write
+  issues: write
 
 on:
   pull_request:
@@ -21,9 +22,28 @@ jobs:
     uses: ./.github/workflows/linting.yml
   build:
     uses: ./.github/workflows/build.yml
-  publish:
+  publish-pypi:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.ref, 'refs/tags/')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs:
+      - tests-and-coverage
+      - linting
+      - build
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist
+
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        env:
+          url: https://pypi.org/p/vdoc
+
+  publish-docker:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     needs:
       - tests-and-coverage
       - linting
@@ -87,3 +107,22 @@ jobs:
         run: |
           jf rt build-publish
 
+  create-github-release:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs:
+      - publish-docker
+      - publish-pypi
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Run JReleaser
+        uses: jreleaser/release-action@v2
+        with:
+          version: 1.13.1
+        env:
+          JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          JRELEASER_PROJECT_VERSION: ${{ github.ref_name }}
