--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,3 +38,9 @@ jobs:
       with:
         name: dist
         path: dist/*
+
+    - name: Upload docs
+      uses: actions/upload-artifact@v4
+      with:
+        name: docs
+        path: src/vdoc/docs/*
