--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,17 @@ long_description = file:README.rst
 long_description_content_type = text/x-rst
 license = MIT
 url = https://github.com/vorausrobotik/vdoc
-
+classifiers =
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
+    License :: OSI Approved :: MIT License
+    Operating System :: MacOS :: MacOS X
+    Operating System :: POSIX :: Linux
+    Natural Language :: English
 
 [options]
 python_requires = >=3.11
