--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,10 +19,12 @@ on:
 jobs:
   tests-and-coverage:
     uses: ./.github/workflows/tests_and_coverage.yml
+    secrets: inherit
   linting:
     uses: ./.github/workflows/linting.yml
   build:
     uses: ./.github/workflows/build.yml
+    secrets: inherit
   publish-pypi:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
