--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -60,11 +60,11 @@ jobs:
       - name: Combine coverage results
         run: tox run -e combine-test-reports
 
-      - name: Archive code coverage results
+      - name: Upload combined python coverage
         uses: actions/upload-artifact@v4
         with:
-          name: code-coverage-report
-          path: reports/coverage.xml
+          name: python-coverage-report
+          path: reports/coverage-python.xml
 
   test-ui-unit:
     runs-on: ubuntu-latest
@@ -82,6 +82,12 @@ jobs:
 
       - name: Run UI unit tests
         run: npm run test:unit
+
+      - name: Upload vitest coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: vitest-coverage-report
+          path: reports/coverage-vitest.xml
 
   test-ui-e2e:
     timeout-minutes: 10
@@ -107,3 +113,29 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
+  upload-coverage:
+    timeout-minutes: 2
+    runs-on: ubuntu-latest
+    needs:
+      - test-ui-unit
+      - coverage-python
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download all coverage artifacts
+        uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+          path: reports
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: vorausrobotik/vdoc
+          disable_search: true
+          disable_telem: true
+          files: 'reports/coverage-python.xml,reports/coverage-vitest.xml'
+          fail_ci_if_error: true
+          verbose: true
