--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@codecov/vite-plugin": "^1.8.0",
     "@eslint/js": "^9.15.0",
     "@playwright/test": "^1.50.1",
     "@tanstack/eslint-plugin-query": "^5.66.0",
