chore: Add `pydantic.mypy` plugin
This improves type checking for pydantic.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ ignore-signatures = "yes"
 # Functions need to be annotated
 disallow_untyped_defs = true
 warn_unused_ignores = true
+plugins = ['pydantic.mypy']
 exclude = [
     "vdoc-\\d+",                    # Ignore temporary folder created by setuptools when building an sdist
     "venv.*/",
