ci(dev): Add `rollup-plugin-visualizer` to npm build
This generates a visualization of the bundle size which is stored
as GitHub actions artifact.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,12 @@ jobs:
     - name: Build python app
       run: tox run -e build
 
+    - name: Upload rollup visualizer result
+      uses: actions/upload-artifact@v4
+      with:
+        name: rollup-visualizer
+        path: reports/bundle-report.html
+
     - name: Upload python artifacts
       uses: actions/upload-artifact@v4
       with:
