--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.0.1",
+    "@orama/react-components": "^0.8.0",
     "@tanstack/react-query": "^5.77.1",
     "@tanstack/react-router": "^1.120.10",
     "axios": "^1.9.0",
