fix(ci): Do not track `routeTree.gen.ts` in git
This file is being generated automatically by vite and must not be tracked
in git.

--- a/.gitignore
+++ b/.gitignore
@@ -62,8 +62,12 @@ Thumbs.db
 *.mov
 *.wmv
 
+# UI and docs
 src/vdoc/webapp/
 src/vdoc/docs/
+
+# UI route tree
+src/ui/routeTree.gen.ts
 
 # Local development files and documentation
 vdoc-docs
