build(npm-dev): Add an override for `@codecov/vite-plugin`
As supposed in https://github.com/codecov/codecov-javascript-bundler-plugins/issues/264.

--- a/package.json
+++ b/package.json
@@ -50,5 +50,10 @@
     "vite": "^7.2.7",
     "vite-plugin-compression2": "^2.4.0",
     "vitest": "^4.0.15"
+  },
+  "overrides": {
+    "@codecov/vite-plugin": {
+      "vite": "^7.0.0"
+    }
   }
 }
