--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@playwright/test": "^1.57.0",
     "@tanstack/eslint-plugin-query": "^5.91.3",
     "@tanstack/router-devtools": "^1.151.6",
-    "@tanstack/router-plugin": "1.151.6",
+    "@tanstack/router-plugin": "^1.151.6",
     "@types/node": "^25.0.9",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
