--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@tanstack/react-router": "^1.151.6",
     "axios": "^1.13.2",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "valibot": "^1.2.0"
   },
   "devDependencies": {
     "@codecov/vite-plugin": "^1.9.1",
